...
            }
        }
        ToolbarItem(placement: .topBarTrailing) {
            Button {
                model.sheet = .comments
            } label: {
                Label("Comments", systemImage: "bubble.left")
            }
            .badge(model.openComments.count)
        }
        ToolbarSpacer(.fixed, placement: .topBarTrailing)
        ToolbarItem(placement: .topBarTrailing) {
            Menu {
...
